--- a/_includes/default.html
+++ b/_includes/default.html
@@ -1,4 +1,8 @@
 <div class="your-custom-class">
     <img src="/images/0101.png" alt="Descriptive text fir resrubf">
   </div>
-  
+
+
+<div id="visualization-container"></div>
+
+
