--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,19 @@
 
   <!-- Setup Open Graph image -->
 
+  #visualization-container {
+  position: fixed;
+  right: 10px; /* Adjust the distance from the right edge */
+  bottom: 10px; /* Adjust the distance from the bottom edge */
+  width: 300px; /* Adjust the width as needed */
+  height: 200px; /* Adjust the height as needed */
+  background-color: #f0f0f0; /* Background color of the container */
+  border: 1px solid #ccc; /* Border around the container */
+  overflow: hidden; /* Ensures the content does not overflow the container boundaries */
+}
+
+
+
   {% if page.image %}
     {% assign src = page.image.path | default: page.image %}
 
